checkbox functional addrow

--- a/views/index/vytvortabulku.twig
+++ b/views/index/vytvortabulku.twig
@@ -12,6 +12,13 @@
         .highlight {
             background-color: #76f57a;
         }
+        #vystup {
+            font-size: 16px;
+            font-weight: bold;
+            color: #333;
+            margin-top: 20px;
+        }
+
     </style>
     <h2 class="text-center">Vytvor tabuľku</h2>
     <form method="POST" class="text-center" onsubmit="event.preventDefault();">
@@ -83,6 +90,13 @@
         //cakanie na premenne neni spravene
         // odoslat tlacidlo ?..
 
+        // Global variable to keep track of the next ID
+        let nextRowId;
+
+        function initializeNextRowId() {
+            nextRowId = parseInt(document.getElementById("row").value) +1;
+        }
+
         function addRow() {
             var table = document.getElementById("myTable");
             var vstup = document.getElementById("vystup");
@@ -95,7 +109,8 @@
 
                 if (i === 0) {
                     // Set the correct value for the ID column
-                    newCell.innerText = table.rows.length - 1;
+                    newCell.innerHTML = "<input type='text' name='data[" + (table.rows.length - 1) + "][" + (i + 1) + "]' value='" + nextRowId + "' style='border: 0; outline: 0; width: 100%; height: 100%;' readonly>";
+                    nextRowId++; // Increment the next ID
                 } else {
                     newCell.innerHTML = "<input type='text' name='data[" + (table.rows.length - 1) + "][" + (i + 1) + "]' value='' style='border: 0; outline: 0; width: 100%; height: 100%;'>";
 
@@ -131,7 +146,6 @@
                             row.cells[i].classList.toggle("highlight");
                         }
                     });
-
                 }
             }
 
@@ -366,8 +380,11 @@
 
             }
             //return [name, values];
+            initializeNextRowId();
             values = values.slice(0, -1);
+
             let output = `CREATE TABLE ${name}(${values});`;
+            output = output.replace(/,/g, ',\n    '); // add newline and indentation
             console.log(output);
 
             vystup.innerHTML = output;
