Flash messages working

--- a/views/base.twig
+++ b/views/base.twig
@@ -30,7 +30,7 @@
                     </li>
                     {% if 'admin' in user.roles %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/vytvor">Vytvor tabuľku</a>
+                            <a class="nav-link" href="/vytvortabulku">Vytvor tabuľku</a>
                         </li>
                     {% endif %}
 
