--- a/views/base.twig
+++ b/views/base.twig
@@ -10,10 +10,65 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="/client.js" type="module"></script>
+    <style>
+        /* Настройки шапки */
+        .navbar {
+            background-color: #484848;
+            color: #696969;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
+
+        .navbar-brand, .nav-link {
+            color: #696969;
+        }
+
+        .navbar-brand img {
+            filter: grayscale(100%) invert(100%);
+        }
+
+        .navbar-brand:hover, .nav-link:hover {
+            color: #a5a5a5;
+        }
+
+        .navbar-toggler {
+            border-color: #696969;
+        }
+
+        .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23808080' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+        }
+
+
+        /* Настройки контейнера с уведомлениями */
+        .alert {
+            border-color: #a5a5a5;
+            background-color: #f7f7f7;
+            color: #484848;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
+
+        /* Настройки кнопки */
+        .btn-outline-secondary {
+            border-color: #a5a5a5;
+            color: #a5a5a5;
+        }
+
+        .btn-outline-secondary:hover {
+            background-color: #a5a5a5;
+            color: #696969;
+        }
+        .zoom-in {
+            transition: transform 0.5s ease;
+        }
+
+        .zoom-in:hover {
+            transform: scale(1.1);
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light  justify-content-between">
+<div class="container ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light  justify-content-between zoom-in">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="https://static.vecteezy.com/system/resources/thumbnails/001/206/183/small/mountain.png" width="50" height="30" alt="">
