--- a/views/index/vytvortabulku.twig
+++ b/views/index/vytvortabulku.twig
@@ -14,20 +14,19 @@
         button {
             display: inline-block;
             padding: 12px 24px;
-            border-radius: 30px;
-            background-color: red;
-            color: yellow;
+            border-radius: 5px;
+            background-color: #696969;
+            color: #ffffff;
             text-align: center;
             font-size: 18px;
             text-decoration: none;
-            box-shadow: darkred;
-            transition: all 0.2s ease-in-out;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease-in-out;
         }
 
         button:hover {
-            background-color: red;
-            box-shadow: 0px 3px 0px darkred;
-            transform: translateY(-2px);
+            background-color: #888888;
         }
     </style>
     <h2 class="text-center">Vytvor tabuľku</h2>
