--- a/views/index/index.twig
+++ b/views/index/index.twig
@@ -5,4 +5,5 @@
         <h1>Vitajte na stránke OurPHP</h1>
         <p1>Kde si môžete vytvorit tabulku, jednoducho a rýchlo.</p1>
     </div>
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjMwN2VhN2U1MTQ1NDM4OTJkYzk0NDFmNDk1ZGM4ODQ5NWI2MWY5ZSZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/VH7logbab0ARzP4HYF/giphy.gif" alt="Môj GIF" style="width: 1280px; height: 720px; display:block; margin:auto;">
 {% endblock%}
