--- a/views/index/vytvortabulku.twig
+++ b/views/index/vytvortabulku.twig
@@ -2,8 +2,22 @@
 {% block content %}
     <style>
         /* Custom CSS */
+        /* Custom CSS */
         #myTable {
             margin: 0 auto;
+            border-collapse: collapse;
+            width: 100%;
+        }
+        #myTable td, #myTable th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+        #myTable th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: center;
+            background-color: #007BFF;
+            color: white;
         }
         input[type="text"]:focus {
             outline: 1px solid #007BFF;
@@ -15,18 +29,20 @@
             display: inline-block;
             padding: 12px 24px;
             border-radius: 30px;
-            background-color: red;
-            color: yellow;
+            background-color: #007BFF;
+            color: white;
             text-align: center;
             font-size: 18px;
             text-decoration: none;
-            box-shadow: darkred;
+            box-shadow: 0px 3px 0px #005ce6;
             transition: all 0.2s ease-in-out;
+            border: none;
+            cursor: pointer;
         }
 
         button:hover {
-            background-color: red;
-            box-shadow: 0px 3px 0px darkred;
+            background-color: #005ce6;
+            box-shadow: 0px 3px 0px #005ce6;
             transform: translateY(-2px);
         }
     </style>
@@ -69,20 +85,34 @@
         setInputValidation('column');
     </script>
 
+    {% set tableData = {
+        'row': row|default([]),
+        'column': column|default([]),
+        'data': data
+    } %}
 
-    <table id="myTable" border="1" style="width: 50%; height: 100px;">
-        {% for i in row|default([]) %}
-            <tr>
-                {% for j in column|default([]) %}
-                    <td style="border: 1px solid black; padding: 5px;">
-                        <label>
-                            <input type="text" style="border: 0;" name="data[{{ i }}][{{ j }}]" value="{{ data[i][j]|default('') }}" onblur="updateDatabase({{ i }}, {{ j }}, this.value)" onclick="this.removeAttribute('readonly')">
-                        </label>
-                    </td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-    </table>
+    {% set appSession = app.session %}
+    {% if appSession %}
+        {{ appSession.set('myTable', tableData) }}
+    {% endif %}
+
+    {% set appSession = app.session %}
+    {% set tableData = appSession.get('myTable') %}
+    {% if tableData %}
+        <table id="myTable" border="1" style="width: 50%; height: 100px;">
+            {% for i in tableData['row'] %}
+                <tr>
+                    {% for j in tableData['column'] %}
+                        <td style="border: 1px solid black; padding: 5px;">
+                            <label>
+                                <input type="text" style="border: 0;" name="data[{{ i }}][{{ j }}]" value="{{ tableData['data'][i][j]|default('') }}" onblur="updateDatabase({{ i }}, {{ j }}, this.value)" onclick="this.removeAttribute('readonly')">
+                            </label>
+                        </td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </table>
+    {% endif %}
 
 
     <div class="text-center mt-3">
